--- a/logicBuilding.csproj
+++ b/logicBuilding.csproj
@@ -2,7 +2,13 @@
 
   <PropertyGroup>
     <OutputType>Exe</OutputType>
-    <TargetFramework>netcoreapp2.0</TargetFramework>
+    <TargetFramework>net5.0</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <None Remove="StackProblems\" />
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="StackProblems\" />
+  </ItemGroup>
 </Project>
